sumo/tests/netconvert/import/XML/errors/xml_no_edg/options.netconvert
--node-files=input_nodes.nod.xml --output=net.net.xml
